# Multi-View-Student-Records

./: CMakeLists.txt  gen_member4_viva.py  generate_pdf.py
.claude/: settings.local.json
Multi-View-Student-Records/: CMakeLists.txt  README.md
Multi-View-Student-Records/include/: CourseRegistration.hpp  EventScheduler.hpp  LibraryManager.hpp
Multi-View-Student-Records/src/: CourseRegistration.cpp  EventScheduler.cpp  StudentRecords.cpp  main.cpp  sfml_ui.cpp
UniCore_completed/include/: CourseRegistration.hpp  EventScheduler.hpp  RBTree.hpp  StudentRecords.hpp
UniCore_completed/src/: CourseRegistration.cpp  LibraryManager.cpp  StudentRecords.cpp  sfml_ui.cpp
UniCore_completed/tests/: test_unicore.cpp
demo/: demo_rbtree.cpp  demo_rbtree_viz.html
include/: Book.hpp  CGPAIndex.hpp  CourseRegistration.hpp  Event.hpp  EventScheduler.hpp  LibraryManager.hpp  MultiViewManager.hpp  NameIndex.hpp  RBTree.hpp  Student.hpp  StudentRecords.hpp  YearIndex.hpp
src/: CGPAIndex.cpp  CourseRegistration.cpp  EventScheduler.cpp  LibraryManager.cpp  MultiViewManager.cpp  NameIndex.cpp  RBTree.cpp  RBTree.tpp  StudentRecords.cpp  YearIndex.cpp  main.cpp
tests/: test_course_registration.cpp  test_event_scheduler.cpp  test_indexes.cpp  test_library_manager.cpp  test_rbtree.cpp
